--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <h2>Три основных места работы:</h2>
 
   <p>1. WD (Working directory) - рабочая директория. Место где мы храним и изменяем файлы</p>
-  <p>2. Staging area (srage) - стейдж. Место, куда попадают файлы после команды git add. По сути, это промежуточный этап, в котором мы СОБИРАЕМ изменения для того чтобы затем на их основе создать коммит.</p>
-  <p></p>
+  <p>2. Staging area (stage) - стейдж. Место, куда попадают файлы после команды git add. По сути, это промежуточный этап, в котором мы СОБИРАЕМ изменения для того чтобы затем на их основе создать коммит.</p>
+  <p>3. Local Repo - локальный репозиторий. Место хранения наших коммитов (измеений)</p>
   <p></p>
 
   это добавлено уже после гоманды гит адд
