add pull and fetch commandes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <li>git add - добавление файлов из рабочей директории в стейдж</li>
     <li>git commit -m "commit description" - (с флагом М) создание коммита (сохранение изменений, накопленных в стейдже)
     </li>
+    <li>git push - отправить все новые коммиты на сервер (синхнонизация изменений с сервером)</li>
+    <li>git pull - забрать все новые коммиты с сервера (синхнонизация изменений с сервером) и переключится на самый
+        свежий комит</li>
+    <li>git fetch - забрать все новые коммиты с сервера (синхнонизация изменений с сервером)</li>
+  
 
   </ul>
 
@@ -25,7 +30,7 @@
   <p>1. WD (Working directory) - рабочая директория. Место где мы храним и изменяем файлы</p>
   <p>2. Staging area (stage) - стейдж. Место, куда попадают файлы после команды git add. По сути, это промежуточный этап, в котором мы СОБИРАЕМ изменения для того чтобы затем на их основе создать коммит.</p>
   <p>3. Local Repo - локальный репозиторий. Место хранения наших коммитов (измеений)</p>
-  <p></p>
+  <p>4. Remote repo - удаленный репозиторий. То же самое, но не на нашем компьютере, а где-то на отдельном сервере.</p>
 
   это добавлено уже после гоманды гит адд
 
