add second title

--- a/index.html
+++ b/index.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1 - Базовые команды</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>1 - Базовые команды</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2 - Команды работы с ветками</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <h1>2 - Команды работы с ветками</h1>
+
+    <h2>Дополнительные команды</h2>
+
+    <ol>
+      <li>
+        git checkout NAME/HASH - позволяет перместитьна ветку или коммит ХЕД
+      </li>
+    </ol>
 
     <h2>Базовые команды</h2>
 
-  <ul>
-    <li>git init - создание репозитория</li>
-    <li>git status - показывает ваше текущее состояние в гите</li>
-    <li>git add - добавление файлов из рабочей директории в стейдж</li>
-    <li>git commit -m "commit description" - (с флагом М) создание коммита (сохранение изменений, накопленных в стейдже)
-    </li>
-    <li>git push - отправить все новые коммиты на сервер (синхнонизация изменений с сервером)</li>
-    <li>git pull - забрать все новые коммиты с сервера (синхнонизация изменений с сервером) и переключится на самый
-        свежий комит</li>
-    <li>git fetch - забрать все новые коммиты с сервера (синхнонизация изменений с сервером)</li>
-  </ul>
+    <ul>
+      <li>git init - создание репозитория</li>
+      <li>git status - показывает ваше текущее состояние в гите</li>
+      <li>git add - добавление файлов из рабочей директории в стейдж</li>
+      <li>
+        git commit -m "commit description" - (с флагом М) создание коммита
+        (сохранение изменений, накопленных в стейдже)
+      </li>
+      <li>
+        git push - отправить все новые коммиты на сервер (синхнонизация
+        изменений с сервером)
+      </li>
+      <li>
+        git pull - забрать все новые коммиты с сервера (синхнонизация изменений
+        с сервером) и переключится на самый свежий комит
+      </li>
+      <li>
+        git fetch - забрать все новые коммиты с сервера (синхнонизация изменений
+        с сервером)
+      </li>
+    </ul>
 
+    <h2>Три основных места работы:</h2>
 
-  
-  <h2>Три основных места работы:</h2>
+    <p>
+      1. WD (Working directory) - рабочая директория. Место где мы храним и
+      изменяем файлы
+    </p>
+    <p>
+      2. Staging area (stage) - стейдж. Место, куда попадают файлы после команды
+      git add. По сути, это промежуточный этап, в котором мы СОБИРАЕМ изменения
+      для того чтобы затем на их основе создать коммит.
+    </p>
+    <p>
+      3. Local Repo - локальный репозиторий. Место хранения наших коммитов
+      (измеений)
+    </p>
+    <p>
+      4. Remote repo - удаленный репозиторий. То же самое, но не на нашем
+      компьютере, а где-то на отдельном сервере.
+    </p>
 
-  <p>1. WD (Working directory) - рабочая директория. Место где мы храним и изменяем файлы</p>
-  <p>2. Staging area (stage) - стейдж. Место, куда попадают файлы после команды git add. По сути, это промежуточный этап, в котором мы СОБИРАЕМ изменения для того чтобы затем на их основе создать коммит.</p>
-  <p>3. Local Repo - локальный репозиторий. Место хранения наших коммитов (измеений)</p>
-  <p>4. Remote repo - удаленный репозиторий. То же самое, но не на нашем компьютере, а где-то на отдельном сервере.</p>
-
-  это добавлено уже после гоманды гит адд
+    это добавлено уже после гоманды гит адд
 
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
