add info about head

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>1 - Базовые команды</h1>
 
+    <h3>HEAD - указатель на коммит, на котором мы сейчас находимся</h3>
+
     <h2>Базовые команды</h2>
 
   <ul>
