add merch command

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <li>
         git checkout NAME/HASH - позволяет перместитьна ветку или коммит ХЕД
       </li>
+       <li>git checkout -b NEW_BRANCH_NAME - созвать новую ветку и сразу переместиться на нее</li>
+       <li>git merge BRANCH_NAME - влить BRANCH_NAME в текущую ветку </li>
+
     </ol>
 
     <h2>Базовые команды</h2>
