add origin command

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </li>
        <li>git checkout -b NEW_BRANCH_NAME - созвать новую ветку и сразу переместиться на нее</li>
        <li>git merge BRANCH_NAME - влить BRANCH_NAME в текущую ветку </li>
-
+       <li>git remote add origin url - привязка локального и удалённого репозитория</li>
     </ol>
 
     <h3>HEAD - указатель на коммит, на котором мы сейчас находимся</h3>
